fixed contrast to website and did small frontend fixes

--- a/src/app.css
+++ b/src/app.css
@@ -206,9 +206,9 @@
 @layer theming {
 	:root {
 		/* Base custom colors */
-		--blackest: hsl(0, 15%, 5%);
-		--white: hsl(0, 0%, 100%, 0.9);
-		--sky: hsla(187, 39%, 55%, 0.5);
+		--blackest: hsl(0, 0%, 11%);
+		--white: hsla(0, 0%, 85%, 0.9);
+		--sky: hsla(187, 56%, 52%, 0.5);
 		--purple: hsla(227, 98%, 68%, 0.6);
 		--yellow: hsla(46, 93%, 42%, 0.75);
 		--dark-blue: hsla(203, 94%, 20%, 0.75);
@@ -228,8 +228,7 @@
 		/* Theme variables using light-dark() and custom colors */
 		--clr-bg: light-dark(var(--white), var(--blackest));
 		--clr-main: light-dark(var(--blackest), var(--white));
-		--clr-blue: light-dark(var(--darker-blue), var(--sky));
-		--clr-link: light-dark(var(--purple), var(--sky));
+		--clr-link: light-dark(var(--sky), var(--darkest-blue));
 		--clr-pale: light-dark(var(--yellow), var(--pale));
 		--clr-gray: light-dark(var(--gray), var(--dark-gray));
 		--clr-green: light-dark(var(--success-dark), var(--success-light));
@@ -251,7 +250,7 @@
 		--clr-bg: var(--white);
 		--clr-main: var(--blackest);
 		--clr-blue: var(--darkest-blue);
-		--clr-link: var(--purple);
+		--clr-link: var(--darker-blue);
 		--clr-pale: var(--yellow);
 		--clr-inverted: var(--white);
 		--clr-button-text: var(--blackest);
